2015-10-22  Robby Stephenson  <robby@periapsis.org>

	* Added user-defined query pairs for SRUFetcher url.

2015-08-22  Robby Stephenson  <robby@periapsis.org>

	* Improved PDF importer for Science Direct files.

2015-08-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed key accelerator conflict for 'D' in Collection Fields dialog (Bug 351226).

2015-08-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with using external fetcher source with MODS output.

2015-07-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed a crashing bug with Nepomuk and certain file types (Bug 345458).

2015-06-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with HTML exporting titles with single-quotes (Bug 348381).

2015-05-27  Robby Stephenson  <robby@homebase.mars>

	* Removed the Citebase fetcher.

2015-05-24  Robby Stephenson  <robby@homebase.mars>

	* Fixed a bug showing horizontal scroll bar with many table columns (Bug 348189).

2015-03-15  Robby Stephenson  <robby@homebase.mars>

	* Removed the PilotDB exporter.

2015-02-15  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.10.

2015-02-14  Robby Stephenson  <robby@homebase.mars>

	* Updated the Moviemeter data source to use the new JSON API.
	* Removed the local KXmlRpc copy since it is no longer needed.
	* Updated cover path in DarkHorse fetcher.

2015-01-23  Robby Stephenson  <robby@homebase.mars>

	* Updated the Discogs data source to use the new JSON API.

2014-12-22  Robby Stephenson  <robby@periapsis.org>

	* Added filter rules for numbers less than and greater.

2014-12-12  Robby Stephenson  <robby@periapsis.org>

	* Converted the BoardGameGeek fetcher from a script to the XML API.

2014-12-06  Robby Stephenson  <robby@periapsis.org>

	* Added importer for BoardGameGeek collections.

2014-12-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with importing Goodreads collection.

2014-11-09  Robby Stephenson  <robby@periapsis.org>
